<resources>
    <string name="app_name">Beworker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Beworker</string>
    <string name="nav_header_subtitle">beworker-team@beworker.cm</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Incription</string>
    <string name="search_hint">Rechercher une offre</string>
    <string name="action_search">Rechercher</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="pwd_forgot">Mot de passe oublié</string>
    <string name="sign_in">S\'inscrire</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_inscription">Insrciption</string>
    <string name="error_invalid_email">Email invalide</string>
    <string name="error_invalid_password">Mot de passe très court</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="telephone">Téléphone</string>
    <string name="email">Email *</string>
    <string name="inscription">Inscription</string>
    <string name="votre_profil">VOTRE PROFIL</string>
    <string name="nom">Nom *</string>
    <string name="prenom">Prénom *</string>
    <string name="completez_profil">COMPLETEZ PROFIL</string>
    <string name="age">Age *</string>
    <string name="ville">Ville</string>
    <string name="sexe">Sexe</string>
    <string name="masculin">Masculin</string>
    <string name="feminin">Féminin</string>
    <string name="vos_contact">VOS CONTACTS</string>
    <string name="adresse">Adresse</string>
    <string name="autres">AUTRES</string>
    <string name="domaine">Domaine</string>
    <string name="statut">Statut</string>
    <string name="connectez_vous_ici">Connectez-vous ici</string>
    <string name="securisez_vous">SECURISEZ VOUS</string>
    <string name="password">Mot de passe *</string>
    <string name="confirmer_password">Confirmer mot de passe *</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="competence">Compétences</string>
    <string name="developpeur_web">Developpeur web

    </string>
    <string name="poste_le_07_02_2019">Posté le: 07/02/2019</string>
    <string name="seed_innov_recrute_de_nouveau_developpeur_web">Seed innov recrute de nouveau developpeur web
    La sociéte Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La sociéte Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de
    La socite Dreamer.Inc dans le cadre de son lancement
    offre une offre pour les de </string>

    <string name="obligation_message">Ce champ est obligatoire</string>
    <string name="default_id">-1</string>
    <string name="non">Non</string>
    <string name="oui">Oui</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="niveau">Niveau</string>
    <string name="informations_personnelles">Informations personnelles</string>
    <string name="experiences_professionnelles">Expériences professionnelles</string>
    <string name="formation">Formations</string>
    <string name="preference">Préférence, ...</string>
    <string name="experiences_pro">Expériences_pro</string>
    <string name="nationalite">Nationalité</string>
    <string name="date_de_fin">Date de fin</string>
    <string name="date_de_debut">Date de début</string>
    <string name="institution">Institution</string>
    <string name="poste">Poste</string>
    <string name="tache_1">Tâche 1</string>
    <string name="tache_2">Tâche 2</string>
    <string name="tache_3">Tâche 3</string>
    <string name="actuel">Actuel</string>
    <string name="langue">Langue</string>
    <string name="nde_singe_igor_dybala">NDE SINGE Igor Dybala</string>
    <string name="_29_ans">29 ans</string>
    <string name="medecin_generaliste">Medecin Généraliste</string>
    <string name="contacts">Contacts</string>
    <string name="igorndesigne_gmail_com">igorndesigne@gmail.com</string>
    <string name="_237656363919">+237656363919</string>
    <string name="yaound_cameroun">Yaoundé - Cameroun</string>
    <string name="email_">Email :</string>
    <string name="chargemet_de_offres">Chargemet de offres...</string>
    <string name="emaile">Email</string>
    <string name="supplementaires">Supplementaires</string>
    <string name="adresseprofil">Adresse</string>
    <string name="statutprofil">Statut</string>
    <string name="sexeprofil">Sexe</string>
    <string name="maskpw">********</string>
    <string name="dateformat">yyyy-mm-dd</string>
    <string name="message_error_onResponse">Veuillez réessayer !</string>
    <string name="title_error_onresponse">Problème de serveur !</string>
    <string name="title_error_onfailure">Problème de connexion !</string>
    <string name="message_onfailure">Vérifiez votre connexion internet et réesssayez</string>
    <string name="title_deconnexion">Déconnexion</string>
    <string name="message_ask_deconnxion">Voulez vous vous déconnecter ?</string>
    <string name="warning">Attention !</string>
    <string name="error_version_sdk_print_cv">Cette fonctionnnalité n\'est pas disponible avec votre version d\'Android</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="link_facebook">https://www.facebook.com/130512992661735/posts/1305134512994610/?app=fbl</string>
    <string name="no_match">Aucun resultat trouve!!</string>
    <string name="link_whatsapp">https://chat.whatsapp.com/JhxEWjPvKwfI0iHvhvDNsG</string>
    <string name="link_twitter">https://www.twitter.com</string>
    <string name="link_dowload_app">https://drive.google.com/open?id=12qDdma69r9A3cOswto4KoeTU1SFq1Y1X</string>

</resources>
