<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_del_expr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_remove"
        android:padding="4dp"
        android:layout_alignParentRight="true"
        android:rotation="270"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp"
                android:paddingBottom="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_debut_expr"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_de_debut"
                        android:inputType="date" />
                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_fin_expr"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_de_fin"
                        android:inputType="date" />
                </android.support.design.widget.TextInputLayout>
                <CheckBox
                    android:id="@+id/cb_present_expr"
                    android:text="@string/actuel"
                    android:layout_marginLeft="182dp"
                    android:layout_marginTop="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_poste_expr"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/poste"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_instittution_expr"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/institution"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_tache1_expr"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/tache_1"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_tache2_expr"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/tache_2"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingBottom="40dp"
                android:paddingRight="24dp"
                android:paddingLeft="24dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_tache3_expr"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/tache_3"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>