<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/page2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="24dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img2"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:text="@string/completez_profil"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"

                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="344dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:background="@drawable/rectange"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="12dp"

                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    >

                    <EditText
                        android:id="@+id/age"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_de_naissance"
                        android:inputType="phone|number"


                        />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="12dp"

                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    >

                    <EditText
                        android:id="@+id/ville"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/ville"
                        android:inputType="text"


                        />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:paddingLeft="39dp"

                >

                <TextView
                    android:id="@+id/Tsexe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexe"
                    android:textColor="@color/colorBlack"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Tsexe"
                    android:text="*"
                    android:textColor="@color/colorRouge_vin" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="76dp"
                    android:paddingTop="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masculin"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:text="@string/feminin"
                        android:textColor="@color/colorBlack"

                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="196dp"
                    android:paddingTop="-15dp">

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/sexe_masculin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true" />

                        <RadioButton
                            android:id="@+id/sexe_feminin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RadioGroup>


                </RelativeLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="48dp"

                >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="22dp"

                    >

                    <ImageButton
                        android:id="@+id/suivant2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ron"
                        android:src="@drawable/ic_arrow_forward_black_24dp"

                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="22dp"

                    >

                    <ImageButton
                        android:id="@+id/precedant2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ron"
                        android:src="@drawable/black_24dp"

                        />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connectez_vous_ici"
                    android:textColor="#006db3" />


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="32dp">

        </LinearLayout>


    </LinearLayout>
    </ScrollView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>