<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="16dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:text="@string/inscription"
            android:textColor="@color/colorWhite"
            android:textSize="21dp" />

    </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".4"
            android:background="@color/colorBlack">

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/page3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="24dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_contacts_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img3"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:text="@string/vos_contact"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"

                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="344dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:background="@drawable/rectange"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="12dp"

                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    >

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textWebEmailAddress"

                        />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="12dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/telephone"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/telephone"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="12dp"

                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    >

                    <EditText
                        android:id="@+id/adresse"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/adresse"
                        android:inputType="textPostalAddress"


                        />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="48dp"

                >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="22dp"

                    >

                    <ImageButton
                        android:id="@+id/suivant3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ron"
                        android:src="@drawable/ic_arrow_forward_black_24dp"

                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="22dp"

                    >

                    <ImageButton
                        android:id="@+id/precedant3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ron"
                        android:src="@drawable/black_24dp"

                        />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connectez_vous_ici"
                    android:textColor="#006db3" />


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="32dp">

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>